[package]
name = "testing-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
warp = "0.3"
dotenv = "0.15.0"
anyhow = "1.0.95"
rand = "0.8.5"

[[bin]]
name = "testing-framework"
path = "src/evaluator/evaluat.rs"

