[package]
name = "testing-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
futures = "0.3.30"
warp = "0.3"
dotenv = "0.15.0"
anyhow = "1.0.95"
rand = "0.8.5"
csv = "1.3.1"
tonic = "0.12.2"
prost = "0.13.5"
hyper-util = "0.1.9"
http-body-util = "0.1.2"
hyper = "0.14.28"
error-stack = "0.4.1"
thiserror = "1.0.58"
dyn-clone = "1.0.17"
async-trait = "0.1.82"
strum = "0.26.3"


[[bin]]
name = "testing-framework"
path = "src/app/main.rs"

[build-dependencies]
tonic-build = "0.12.3"
